# Wake-on-Lan-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  wol
.github/workflows/: c-cpp.yml
src/: main.c  networking.c  networking.h
